# Jorm

./: ..bak.db  .gitignore  .kateproject  __main__.py  actor.py  admins.txt  affects.py  client.py  combat.py  config.py  database.db  database.py  db.db  db_update.sh  db_update2.sh  dev_start.sh  dungeons.yaml  enemies.yaml  game.db  game.db.bak  game_idea.txt  godot_notes  inventory.py  items.py  items.yaml  notes.txt  npcs.py  player.py  protocol.py  requirements.txt  setup.sh  skills.py  skills.yaml  sql_json_key_renamer.py  start.sh  stats.py  tash  update.sh  use_manager.py  utils.py  (+2 more)
server/: __main__.py  bak.db  brevo.py  database.db2  database.py  dialog.py  dialog_new.py  gametime.txt  get_whole_db_for_testing.py  inventory.py  notes.txt  old_reqs.txt  party.py  protocol.py  pyproject.toml  quest.py  requirements.txt  requirements2.txt  test.txt  trade.py  utils.py  world.json  world.py
server/.configuration bak/: config.py  read_from_excel.py
server/__tests__/: test_admin.py
server/actors/: actor.py  ai.py  depracated_enemy_ai.py  enemy.py  enemy.py.old  enemy_ai.py  npcs.py  old_ai.py  player.py
server/affects/: affects.py  manager.py
server/combat/: combat_event.py  damage_event.py  damage_message.py  manager.py
server/configuration/: .~lock.config.ods#  .~lock.equipment.csv#  2.config.ods  config copy.py  config(152).ods:Zone.Identifier  config(153).ods:Zone.Identifier  config(154).ods:Zone.Identifier  config(17).ods:Zone.Identifier  config(18).ods:Zone.Identifier  config(20).ods:Zone.Identifier  config(21).ods:Zone.Identifier  config(22).ods:Zone.Identifier  config(225).ods:Zone.Identifier  config(226).ods:Zone.Identifier  config(25).ods:Zone.Identifier  config(26).ods:Zone.Identifier  config(28).ods:Zone.Identifier  config(30).ods:Zone.Identifier  config(33).ods:Zone.Identifier  config(34).ods:Zone.Identifier  config(35).ods:Zone.Identifier  config(4).ods:Zone.Identifier  config(5).ods:Zone.Identifier  config(71).ods:Zone.Identifier  config(74).ods:Zone.Identifier  config(77).ods:Zone.Identifier  config(90).ods:Zone.Identifier  config(91).ods:Zone.Identifier  config(93).ods:Zone.Identifier  config(94).ods:Zone.Identifier  config(95).ods:Zone.Identifier  config(96).ods:Zone.Identifier  config(97).ods:Zone.Identifier  config(98).ods  config.json  config.ods  (+38 more)
(+518 files in other folders)
