[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jorm-server"
version = "0.0.0"
description = "Jorm server"
requires-python = ">=3.12"
dependencies = [
  "attrs==24.2.0",
  "Automat==24.8.1",
  "certifi==2026.1.4",
  "cffi==2.0.0",
  "charset-normalizer==3.4.4",
  "constantly==23.10.4",
  "cryptography==44.0.2",
  "defusedxml==0.7.1",
  "ezodf==0.3.2",
  "fuzzywuzzy==0.18.0",
  "hyperlink==21.0.0",
  "idna==3.10",
  "incremental==24.7.2",
  "lxml==5.3.1",
  "numpy==2.2.2",
  "odfpy==1.4.1",
  "pandas==2.2.3",
  "pandas-ods-reader==1.0.1",
  "pycparser==2.22",
  "pyOpenSSL==24.3.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.1",
  "PyYAML==6.0.2",
  "pytest==8.3.5",
  "requests==2.32.5",
  "setuptools==80.9.0",
  "six==1.17.0",
  "tomli==2.2.1",
  "Twisted==24.11.0",
  "typing_extensions==4.12.2",
  "tzdata==2025.1",
  "urllib3==2.6.3",
  "zope.interface==7.2",
]

[tool.setuptools.packages.find]
include = [
  "actors",
  "affects",
  "combat",
  "configuration",
  "help",
  "help_slop",
  "items",
  "skills",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jorm-server"
version = "0.0.0"
description = "Jorm server"
requires-python = ">=3.12"
dependencies = [
  "attrs==24.2.0",
  "Automat==24.8.1",
  "certifi==2026.1.4",
  "cffi==2.0.0",
  "charset-normalizer==3.4.4",
  "constantly==23.10.4",
  "cryptography==44.0.2",
  "defusedxml==0.7.1",
  "ezodf==0.3.2",
  "fuzzywuzzy==0.18.0",
  "hyperlink==21.0.0",
  "idna==3.10",
  "incremental==24.7.2",
  "lxml==5.3.1",
  "numpy==2.2.2",
  "odfpy==1.4.1",
  "pandas==2.2.3",
  "pandas-ods-reader==1.0.1",
  "pycparser==2.22",
  "pyOpenSSL==24.3.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.1",
  "PyYAML==6.0.2",
  "pytest==8.3.5",
  "requests==2.32.5",
  "setuptools==80.9.0",
  "six==1.17.0",
  "tomli==2.2.1",
  "Twisted==24.11.0",
  "typing_extensions==4.12.2",
  "tzdata==2025.1",
  "urllib3==2.6.3",
  "zope.interface==7.2",
]

[tool.setuptools.packages.find]
include = [
  "actors",
  "affects",
  "combat",
  "configuration",
  "help",
  "help_slop",
  "items",
  "skills",
]
